整理成可公开的开源项目：文档只讲项目本身，目录按职责分组
文档原来是按讨论顺序堆起来的：每次结论、每个 bug 怎么找到的、"为出文档
重跑了一次"这类过程细节全在里面。对一个第一次点开仓库的人，这些是噪声 ——
他要知道的是这东西是什么、怎么用、边界在哪、凭什么信。所以文档按用途重写，
过程叙述删掉，值得留的设计理由改写成"当前设计为什么是这样"。

## 文档

26 篇收敛成 6 篇核心 + 一个 reference 目录，中英各一份：

  ARCHITECTURE  拓扑、地址映射、时钟、密码核、密钥仓与防火墙、软件栈
  API           SDF 风格接口 + GM/T 0018 对应 + PKCS#11
  REGISTERS     五个 AXI 从机的完整寄存器契约（原来散在三份文档里）
  SECURITY      边界、威胁模型、证明了什么、没防什么、局限
  TESTING       测什么、怎么测、每个数字怎么复现
  USAGE         构建、运行、出 bitstream、上板、离线部署

README 从 382 行压到 220 行：是什么、核心特性、一张架构图、快速上手 +
SDF 调用示例、证据表、局限、目录导览。

删掉的是过程记录，不是证据：
  - fpga-进展.md（2136 行工程日志）—— 设计取舍已并入 ARCHITECTURE/REGISTERS
  - 密码机原型-说明文档.md —— 结论并入 SECURITY/TESTING
  - 服务层设计.md —— 并入 API
  - constant-time 里"逐个 bug 怎么找到的"那一节
  - 原 PDF 由 5 篇中文文档现出，不再单独维护一份 md，两者不会漂移

board/logs/ 下的原始日志原样保留 —— 那是证据，不是文档。

局限集中成一节，不再散落：ML-KEM 的 dk 出硬件、root 仍能使唤硬件、
KDR 是桩、没有 SM2 核、性能是安全牌不是速度牌、DPA 有意 defer、
两件事卡 JTAG。

## 目录

  fpga/fan_ctrl/  →  hardware/platform/fan_ctrl/
      顶层多一个只装一个子目录的 fpga/ 会让人分不清哪个才是 FPGA 代码。
      "风扇与密码逻辑分开"这条意图靠 platform/ 与 rtl/ 的区分保住。

  board/  30 个文件平铺  →  src/ scripts/ logs/（kmod/ factory/ petalinux/ 不动）

hardware/ 不改名成 rtl/：它下面同时装 rtl/tb/model/syn，是常规布局，
改名要动 93 处引用而读者理解不会更好。boot/ 同理保留，比 fw/ 更说明问题。

新增 CONTRIBUTING、SECURITY（上报口径）、CI、issue/PR 模板、.editorconfig，
以及 board/ boot/ service/ tools/ hardware/platform/ 的目录 README。

## 回归

移动前后各跑一遍，逐项一致：
  Verilator lint + Icarus   70 模块，0 告警
  cocotb                    197 项全过
  Yosys 可综合性            68 模块全过
  ctest                     46/46，4109 条断言
  CMake 配置 + 构建         通过
</content>